--- a/overlay/FrameworkResOverlayLG7n/res/values/config.xml
+++ b/overlay/FrameworkResOverlayLG7n/res/values/config.xml
@@ -211,7 +211,7 @@
      </array>
 
      <array name="config_sfps_sensor_props_0" translatable="false">
-          <item></item>     <!-- displayId -->
+          <item>local:0</item>     <!-- displayId -->
           <item>1080</item> <!-- sensorLocationX -->
           <item>1050</item>  <!-- sensorLocationY -->
           <item>210</item>  <!-- sensorRadius -->
